# DecisionTree_Implementation

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Bagging.hpp  Calculations.hpp  DecisionTree.hpp  Question.hpp  Utils.hpp
lib/src/: Bagging.cpp  Calculations.cpp  DataReader.cpp  DecisionTree.cpp  Leaf.cpp  Node.cpp  Question.cpp  TreeTest.cpp  main.cpp  main.h
test/: CMakeLists.txt  bagging_tester.cpp  decision_tree_tester.cpp
